magicbox saves and removes styling immediately on content drop, misc formEdit fixes
After dragging the submit button sidebar views display properly, and the scrollbar doesn't show up in the sidebar when the form title is edited

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -420,7 +420,7 @@ $sidebar-width: 300px;
   width: $sidebar-width;
   margin: 0 0 0 20px;
   position: absolute;
-  overflow: auto;
+  overflow: visible;
 }
 
 .sidebar_header {
